--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,16 +26,16 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		color-scheme: light dark;
+		color-scheme: dark;
 	}
 	html {
 		font-family: "Onest Variable", system-ui, sans-serif;
 	}
 	body {
-		background: #252525;
+		background: #482B5A;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
+		align-items: center;
 		min-height: 100vh;
 	}					
 </style>
